--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react-router": "^5.0.1",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
